2000-08-11 08:55 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
        * added support for code generated by the preprocessed TEXT/ENDTEXT
        NOTE: Since it is not implemented yet in harbour preprocessor
        I have followed Clipper method here. Every line of TEXT/ENDTEXT
        is preprocessed into
        QOUT("...")<EndOfLine>
        or
        QOUT([...])<EndOfLine>
        with no spaces. [] string delimiters are used if any combination 
        of "'[] are used inside a text.
        Notice that during preprocessing of normal code when [] string 
        delimiters are used then Clipper uses the first closing ] character
        as a string terminator.

2000-08-10 14:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/rdd/dbcmd.c
     ! Assign szAlias in DBSETRELATION a default value of NULL
       in order to eliminate a compile-time warning.

2000-08-10 17:33 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
        * fixed DO DECLARE syntax
        
2000-08-10 11:50 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
        * fixed handling of while[] and case[]
        * YY_USER_ACTION placed into a comment (the resulting 
        object file is 20kB smaller)

2000-08-09 20:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/simplex.c
     * Corrected support for BREAK ( ).

2000-08-09 17:15 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/simplex.c
     * Minor improvements.

   * source/compiler/harbour.slx
     - Removed un-needed cases in hb_lex_CustomAction() added by Ryszard.
     - Removed 1 rule each for WHILE CASE BREAK and RETURN to default trailing '[' to string delimiter.

   * tests/keywords.prg
     * Corrected few lines that had '[' as Array Index to String Delimiter after CASE, BREAK etc.

     /* Note keywords.prg should now be valid other than 3 (old) correct errors to do with FIELD*/