@@ -1,3 +1,7 @@
+2000-08-11 11:25 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * source/pp/ppcore.c
+     * Bug fixed, noted by Victor Szel
+
 2000-08-11 08:55 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
 
     *source/compiler/harbour.l
